--- a/BlogApplication/Web.config
+++ b/BlogApplication/Web.config
@@ -11,7 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-BlogApplication-20180917013606.mdf;Initial Catalog=aspnet-BlogApplication-20180917013606;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="private.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
