added contact email functionality

--- a/BlogApplication/private.config
+++ b/BlogApplication/private.config
@@ -1,7 +1,8 @@
 ﻿<appSettings>
-  <add key="username" value="mack.hatcher1@outlook.com"/>
-  <add key="password" value="J.killa3627"/>
-  <add key="emailto" value="mack.hatcher1@outlook.com"/>
-  <add key="host" value="smtp.live.com"/>
-  <add key="port" value="587"/>
+  <add key="username" value="420b6658283bbf"/>
+  <add key="password" value="	da4394de78ae94"/>
+  <add key="emailfrom" value="mack.hatcher1@outlook.com"/>
+  <add key="emailto" value="813fcc1eda-7fce01@inbox.mailtrap.io"/>
+  <add key="host" value="	smtp.mailtrap.io"/>
+  <add key="port" value="2525"/>
 </appSettings>
